src/parser_interned/snapshots/simp__parser_interned__tests__tests__inputs__valid__expr_after_block.snap
---
source: src/parser_interned/tests.rs
expression: parse(&input)
---
ExprBlock {
    inner: Block {
        body: [],
        tail: None,
    },
}
ExprInt {
    value: 0,
}
