src/parser_interned/snapshots/simp__parser_interned__tests__tests__inputs__valid__expr_int.snap
---
source: src/parser_interned/tests.rs
expression: parse(&input)
---
ExprInt {
    value: 0,
}
ExprInt {
    value: 1234,
}
