src/parser_interned/snapshots/simp__parser_interned__tests__tests__inputs__valid__expr_str.snap
---
source: src/parser_interned/tests.rs
expression: parse(&input)
---
ExprStr {
    value: StrId {
        raw: 1,
    },
}
ExprStr {
    value: StrId {
        raw: 2,
    },
}
ExprStr {
    value: StrId {
        raw: 3,
    },
}
